# glycin-master

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  NEWS  README.md  meson.build
build-aux/cross/: Dockerfile.windows
docs/website/: list-formats.rs
glycin/: Cargo.toml
glycin-common/: Cargo.toml
glycin-common/src/: lib.rs  operations.rs
glycin-core/: Cargo.toml
glycin-core/src/: api_common.rs  api_editor.rs  api_loader.rs  config.rs  dbus.rs  dbus_shim.rs  error.rs  fontconfig.rs  gobject.rs  icc.rs  lib.rs  orientation.rs  pool_shim.rs  sandbox.rs  source.rs  util.rs
glycin-core/src/config/: indentifier.rs
glycin-core/src/gobject/: creator.rs  encoded_image.rs  image.rs  loader.rs  new_frame.rs
glycin-loaders/: meson.build
glycin-loaders/glycin-heif/: Cargo.toml  glycin-heif.conf
glycin-loaders/glycin-heif/src/: editing.rs  main.rs
glycin-loaders/glycin-image-rs/: Cargo.toml  glycin-image-rs.conf
glycin-loaders/glycin-image-rs/src/: animated.rs  editor.rs  lib.rs  main.rs
glycin-loaders/glycin-image-rs/src/editor/: jpeg.rs  png.rs
glycin-loaders/glycin-jxl/: Cargo.toml  glycin-jxl.conf
glycin-loaders/glycin-jxl/src/: editing.rs  main.rs
glycin-loaders/glycin-raw/: Cargo.toml
glycin-loaders/glycin-svg/: Cargo.toml  glycin-svg.conf
glycin-thumbnailer/src/: main.rs
glycin-utils/: Cargo.toml
glycin-utils/src/: api.rs  builtin.rs  dbus_editor_api.rs  dbus_loader_api.rs  dbus_types.rs  editing.rs  error.rs  image_rs.rs  img_buf.rs  instruction_handler.rs  lib.rs  memory.rs  shared_memory.rs
glycin-utils/src/api/: creator.rs  editor.rs  loader.rs
glycin-utils/src/editing/: change_memory_format.rs  clip.rs  operations.rs  orientation.rs
glycin-utils/src/memory/: fungible.rs  local.rs  shared.rs
glycin/glycin-builtin/: Cargo.toml
glycin/glycin-external/: Cargo.toml
glycin/glycin-external/src/: lib.rs
glycin/src/: api_common.rs  api_creator.rs  api_editor.rs  api_loader.rs  config.rs  dbus.rs  error.rs  icc.rs  lib.rs  orientation.rs  pool.rs  remote_utils.rs  source.rs  util.rs
glycin/src/gobject/: creator.rs  new_frame.rs
libglycin/: Cargo.toml
libglycin-rebind/libglycin-rebind/: Cargo.toml
libglycin-rebind/libglycin-rebind-gtk4/: Cargo.toml
libglycin-rebind/libglycin-rebind-gtk4/sys/: Cargo.toml
libglycin-rebind/libglycin-rebind/sys/: Cargo.toml
libglycin/doc/: libglycin-gtk4.toml  libglycin.toml
libglycin/libglycin-gtk4/: Cargo.toml
libglycin/src/: creator.rs  new_frame.rs
news.d/2.1.0/: components.json
news.d/2.1.1/: components.json  fixed-image-rs-nul-key-value
news.d/2.1.2/: fixes-iamge-rs-jpeg-rgb-editing
tests/: Cargo.toml  change_memory_format.rs  dbus_api_stability.rs  editing.rs  encoding.rs  tests.rs  utils.rs
