[workspace.package]
version = "2.1.0"
authors = ["Sophie Herold"]
description = "Sandboxed image decoding"
license = "MPL-2.0 OR LGPL-2.1-or-later"
homepage = "https://gnome.pages.gitlab.gnome.org/glycin/"
repository = "https://gitlab.gnome.org/GNOME/glycin"
edition = "2024"
rust-version = "1.92"

[profile.release]
lto = true
codegen-units = 1

[profile.release.package]
zbus.opt-level = "z"
zvariant.opt-level = "z"

[workspace]
resolver = "3"
members = [
    "glycin",
    "glycin-common",
    "glycin-dev-tools",
    "glycin-loaders/*",
    "glycin-thumbnailer",
    "glycin-utils",
    "libglycin",
    "libglycin/libglycin-gtk4",
    "tests",
    "libglycin-rebind/libglycin-rebind",
    "libglycin-rebind/libglycin-rebind/sys",
    "libglycin-rebind/libglycin-rebind-gtk4",
    "libglycin-rebind/libglycin-rebind-gtk4/sys",
]
exclude = ["libglycin-rebind/gir"]
default-members = [
    "glycin",
    "glycin-common",
    "glycin-dev-tools",
    "glycin-thumbnailer",
    "glycin-utils",
    "glycin-loaders/glycin-image-rs",
]

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"

[workspace.dependencies]
async-fs = "2.1.0"
async-global-executor = "3.1.0"
async-io = "2.3.2"
async-lock = "3.3.0"
async-task = "4.0.0"
bitflags = "2.9.0"
blocking = "1.6.1"
cairo-rs = "0.22.0"
env_logger = { version = "0.11.0", default-features = false, features = [
    "humantime",
] }
futures-channel = "0.3.30"
futures-lite = { version = "2.1.0" }
futures-task = "0.3.30"
futures-timer = "3.0.3"
futures-util = "0.3.30"
gdk = { package = "gdk4", version = "0.11.0", features = ["v4_16"] }
gdk-sys = { package = "gdk4-sys", version = "0.11.0", features = ["v4_16"] }
# Use newer version to fix issues
gif = "0.13.3"
gio = { version = "0.22.0", features = ["v2_62"] }
gio-sys = { version = "0.22.0", features = ["v2_62"] }
gio-unix = "0.22.0"
glib = { version = "0.22.0", features = ["v2_68"] }
glib-sys = { version = "0.22.0", features = ["v2_68"] }
gobject-sys = { version = "0.22.0", features = ["v2_68"] }
glycin = { path = "glycin/", default-features = false }
glycin-common = { version = "1.0.4", path = "glycin-common/" }
glycin-image-rs = { version = "2.1.0", path = "glycin-loaders/glycin-image-rs", default-features = false }
glycin-utils = { version = "4.1.0", path = "glycin-utils/", default-features = false }
gufo = { version = "0.4.1", features = ["all-image-formats"] }
gufo-common = { version = "1.1.0", features = ["serde"] }
gufo-exif = { version = "0.4.0" }
gufo-jpeg = { version = "0.4.0" }
half = "2.4.1"
hayro-jpeg2000 = "0.3.2"
image = { version = "0.25.9", default-features = false }
image-extras = { version = "0.1.0", default-features = false, features = [
    "xbm",
    "xpm",
] }
lcms2 = "6.0.3"
lcms2-sys = "4.0.4"
libc = "0.2.152"
gly = { package = "libglycin-rebind", version = "0.1.0", path = "libglycin-rebind/libglycin-rebind/" }
libseccomp = "0.4.0"
log = "0.4.0"
memfd = "0.6.3"
memmap = { package = "memmap2", version = "0.9.0" }
nix = { version = "0.30.0", features = ["fs", "resource", "signal"] }
paste = "1.0.0"
png = "0.18.0"
rayon = "1.10.0"
rmp-serde = "1.3.0"
safe-transmute = "0.11.2"
serde = { version = "1.0.162", features = ["derive"] }
static_assertions = { version = "1.1.0" }
system-deps = "7.0"
thiserror = "2.0.3"
tokio = { version = "1.35.1", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "time",
] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "fmt"] }
yeslogic-fontconfig-sys = "6.0.0"
zbus = { version = "5.10.0", default-features = false, features = ["p2p"] }
# Require latest zvariant due to SIGPIPE bugfix
# <https://github.com/z-galaxy/zbus/commit/82533888fe1780581bf1d0c3025f2fd37eac65b5>
zvariant = { version = "5.9.2", default-features = false }
zerocopy = "0.8.12"

[workspace.metadata.cross.target.x86_64-pc-windows-gnu]
dockerfile = "build-aux/cross/Dockerfile.windows"

[workspace.metadata.cross.build.env]
passthrough = ["GLYCIN_TEST_SKIP_EXT"]
