[package]
name = "glycin-core"
readme = "../README.md"
version = "4.0.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["async-io"]
async-io = [
    "dep:async-fs",
    "dep:async-global-executor",
    "dep:async-io",
    "dep:async-lock",
    "dep:async-task",
    "dep:blocking",
    "dep:futures-timer",
    "dep:futures-lite",
    "glycin-utils/async-io",
    "zbus?/async-io",
]
tokio = ["dep:tokio", "dep:tokio-stream", "glycin-utils/tokio", "zbus?/tokio"]
gobject = [
    "glycin-common/gobject",
    "glycin-utils/gobject",
    "dep:tracing-subscriber",
]
gdk4 = ["dep:gdk"]

builtin-image-rs = ["dep:glycin-image-rs", "builtin"]
builtin = ["glycin-utils/builtin", "futures-util/sink", "futures-channel/sink"]
external = [
    "dep:libseccomp",
    "dep:gio-unix",
    "dep:zbus",
    "dep:yeslogic-fontconfig-sys",
    "dep:nix",
    "glycin-utils/external",
]

[dependencies]
async-fs = { workspace = true, optional = true }
async-global-executor = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }
async-lock = { workspace = true, optional = true }
async-task = { workspace = true, optional = true }
blocking = { workspace = true, optional = true }
futures-channel.workspace = true
futures-lite = { workspace = true, optional = true }
futures-timer = { workspace = true, optional = true }
futures-util.workspace = true
gdk = { workspace = true, optional = true }
gio.workspace = true
gio-unix = { workspace = true, optional = true }
glib.workspace = true
glycin-common.workspace = true
glycin-utils = { workspace = true, features = ["glib"] }
glycin-image-rs = { workspace = true, optional = true, features = ["builtin"] }
gufo-common.workspace = true
gufo-exif.workspace = true
lcms2-sys.workspace = true
lcms2.workspace = true
libc.workspace = true
libseccomp = { workspace = true, optional = true }
nix = { workspace = true, features = [
    "fs",
    "resource",
    "signal",
], optional = true }
static_assertions = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing.workspace = true
yeslogic-fontconfig-sys = { workspace = true, optional = true }
zbus = { workspace = true, features = ["p2p"], optional = true }

[package.metadata.docs.rs]
features = ["gdk4"]
