[package]
name = "glycin-utils"
version = "5.0.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-lock.workspace = true
bitflags.workspace = true
blocking.workspace = true
env_logger.workspace = true
futures-lite = { workspace = true, optional = true }
futures-timer.workspace = true
futures-util.workspace = true
glib = { workspace = true, optional = true }
glycin-common.workspace = true
gufo-common = { workspace = true, features = ["zvariant"] }
half.workspace = true
image = { workspace = true, optional = true }
libc.workspace = true
libseccomp = { workspace = true, optional = true }
log.workspace = true
memfd = { workspace = true, optional = true }
memmap = { workspace = true, optional = true }
nix = { workspace = true, features = ["fs", "signal"], optional = true }
paste.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
zbus = { workspace = true, optional = true }
zerocopy.workspace = true

[features]
default = ["async-io"]
async-io = ["zbus?/async-io"]
tokio = ["dep:tokio", "zbus/tokio"]
image-rs = ["dep:image", "loader-utils"]
loader-utils = ["dep:futures-lite"]
gobject = ["glib"]
glib = ["dep:glib"]
builtin = []
external = [
    "dep:libseccomp",
    "dep:memfd",
    "dep:memmap",
    "dep:nix",
    "dep:zbus",
    "dep:serde",
]

[package.metadata.docs.rs]
features = ["image-rs", "loader-utils"]
