[package]
name = "glycin-svg"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cairo-rs.workspace = true
gio.workspace = true
gio-unix.workspace = true
glycin-utils = { workspace = true, features = [
    "async-io",
    "loader-utils",
    "external",
] }
rsvg = { package = "librsvg-rebind", version = "0.3.0" }
