[package]
name = "libglycin-rebind"
version = "0.1.0"
authors = ["Maximiliano Sandoval <msandova@gnome.org>"]
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"
description = "Safe bindings for libglycin"
license = "MIT"
# TODO
# documentation = ""
homepage.workspace = true
repository.workspace = true
categories = ["api-bindings"]
keywords = ["gnome", "glycin"]
exclude = ["Gir.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
libc.workspace = true
glib.workspace = true
gio.workspace = true

[dependencies.ffi]
package = "libglycin-rebind-sys"
path = './sys'
version = "0.1.0"
