[package]
name = "libglycin-gtk4-rebind-sys"
version = "0.1.0"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "glycin", "GUI"]
description = "FFI bindings for libglycin-gtk4"
license = "MIT"
exclude = ["Gir.toml"]
build = "build.rs"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.metadata.system-deps.glycin_2]
name = "glycin-2"
version = "2.0.1"

[package.metadata.system-deps.glycin_gtk4_2]
name = "glycin-gtk4-2"
version = "2.0.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[dependencies.gdk-sys]
workspace = true

[dependencies.system-deps]
workspace = true

[dependencies.gly-sys]
package = "libglycin-rebind-sys"
path = "../../libglycin-rebind/sys"
version = "0.1.0"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]

[build-dependencies]
system-deps = "7"
