[package]
name = "libglycin-rebind-sys"
version = "0.1.0"
categories = ["api-bindings"]
keywords = ["gnome", "glycin"]
description = "FFI bindings for libglycin"
license = "MIT"
exclude = ["Gir.toml"]
build = "build.rs"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.metadata.system-deps.glycin_2]
name = "glycin-2"
version = "2"

[package.metadata.system-deps.glycin_2.v2]
version = "2"

[package.metadata.system-deps.glycin_2.v2_0_1]
version = "2.0.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
workspace = true

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[dependencies.system-deps]
workspace = true

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]

[build-dependencies]
system-deps = "7"
